updated navbar and dashboard to use flex-box to fix weird UI issues on smaller screens. Added logic for joing course

--- a/app_client/app-css/style.css
+++ b/app_client/app-css/style.css
@@ -44,14 +44,6 @@ body {
     margin: 0 auto;
 }
 
-.navbar-brand {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    text-align: center;
-    z-index: -1000;
-}
-
 #wrapper {
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
@@ -154,11 +146,6 @@ body {
         position: relative;
         margin-right: 0;
     }
-}
-
-.fill {
-    min-height: 100%;
-    height: 100%;
 }
 
 .no-courses {
